install/kubernetes/rabbitmq/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: rabbitmq
spec:
  rules:
    - host: rabbitmq.kpaas.nsini.com
      http:
        paths:
          - backend:
              serviceName: rabbitmq
              servicePort: 15672
